Fix overflowing element

--- a/SCSS/Modern Table Row.scss
+++ b/SCSS/Modern Table Row.scss
@@ -183,6 +183,10 @@
                             }
                         }
                 }
+            // Controling of Overflowed Element
+                #code-node {
+                    width: 99%;
+                }
         }
     }
     // Darkmode
